Style: Se agrega favicon y se cambia título

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://firebasestorage.googleapis.com/v0/b/parches-62cbd.appspot.com/o/IconoParches.png?alt=media&token=076fdafd-4be9-418d-8aa3-ffe44b0c9044"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>El parche</title>
   </head>
   <body>
     <div id="root"></div>
