--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       type="image/png"
       href="https://firebasestorage.googleapis.com/v0/b/parches-62cbd.appspot.com/o/IconoParches.png?alt=media&token=076fdafd-4be9-418d-8aa3-ffe44b0c9044"
     />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El parche</title>
   </head>
