public layaout ok

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     integrity="sha512-enHceDibjfw6LYtgWU03hke20nVTm+X5CRi9ity06lGQNtC9GkBNl/6LoER6XzSudGiXy++avi1EbIg9Ip4L1w=="
     crossorigin=""></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/d4cd33a1a3.js" crossorigin="anonymous"></script>
     <title>El parche</title>
   </head>
   <body>
